// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a currency logo with network logo 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 20,
      "justifyContent": "center",
      "width": 20,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
      }
    }
    style={
      [
        {
          "resizeMode": "contain",
        },
        {
          "backgroundColor": "#2222220D",
          "borderColor": "#2222220D",
          "borderRadius": 10,
          "borderWidth": 0.5,
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
  <div
    style={
      {
        "alignItems": "stretch",
        "bottom": 0,
        "flexDirection": "column",
        "position": "absolute",
        "right": 0,
        "shadowColor": "rgba(0,0,0,0.10)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 2,
      }
    }
  />
</div>
`;

exports[`renders a currency logo without network logo 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 20,
      "justifyContent": "center",
      "width": 20,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
      }
    }
    style={
      [
        {
          "resizeMode": "contain",
        },
        {
          "backgroundColor": "#2222220D",
          "borderColor": "#2222220D",
          "borderRadius": 10,
          "borderWidth": 0.5,
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</div>
`;
